2000-08-03  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-edit.c (html_engine_cut_and_paste_begin): hide cursor
	here
	(html_engine_cut_and_paste_end): show it here

	* gtkhtml.c (motion_notify_event): fixed editor cursor setting on
	click

	* htmlprinter.c (draw_background): added quick color printing
	bacground, pixmaps + tiling to be implemented later

	* htmlengine-print.c (print_all_pages): fixed page printing loop

	* htmlprinter.c (finalize): don't showpage here as it was already
	done
	(begin): set debug rounding line to dashed .5pt gray line

	* htmlengine-print.c (print_all_pages): force new_split_offset
	also when new_split_offset == split_offset

2000-08-02  Radek Doulik  <rodo@helixcode.com>

	* gtkhtml.c (on_url): added assert here
	(mouse_change_pos): call on_url only if obj != NULL
	(scroll_update_mouse): call mouse_change_pos only if widget
	already realized

	* htmlclueflow.c (get_post_padding): removed previous uncorrect
	fix

	* htmltable.c (fit_line): override this virtual method as we do
	not want calc_size to be called here - it is expensive and
	unneeded

	* htmltextslave.c (fit_line): split only when len < posLen

	* gtkhtml.c (motion_notify_event): split
	(mouse_change_pos): new helper function, uses on_url
	(on_url): new helper function
	(scroll_update_mouse): new helper function
	(vertical_scroll_cb): call scroll_update_mouse, so mouse is
	updated when scrolling
	(horizontal_scroll_cb): likewise

2000-08-01  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-edit-insert.c: same as below

	* htmltype.c: same as below

	* htmlengine.c: removed inclusion of htmllinktext.h

	* htmlobject.h: removed nb_width from htmlobject as it is not
	needed/used anymore

	* htmlclueflow.c (should_break): not needed anymore - removed
	(calc_size): first try of renice of this ugly function, we don't
	need is_pre anymore, some code extracted to helper function
	set_line_x, fixed first_run arg value for fit_line, fixed FIT_NONE
	case
